# admin-open-api/src/main/resources/openapi/components/api/produits.yml
@@ -45,15 +45,15 @@ paths:
           description: BAD REQUEST
     post:  # post request
       tags:
-        - Product
+        - Produit
       summary: Create a new product
-      operationId: createProduct
+      operationId: createProduit
       requestBody:
         required: true
         content:
           'application/json':
             schema:
-              $ref: '../model/produits/CreateProductRequestDTO.yml'
+              $ref: '../model/produits/ProduitDTO.yml'
       responses:
         '201':
           description: CREATED
@@ -82,6 +82,34 @@ paths:
           description: SUCCESS
           content:
             'application/json':
+              schema:
+                $ref: '../model/produits/ProduitDTO.yml'
+        '404':
+          description: NOT FOUND
+        '400':
+          description: BAD REQUEST
+    put:
+      tags:
+        - Produit
+      summary: Update a product
+      operationId: updateProduit
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '../model/produits/ProduitDTO.yml'
+      responses:
+        '200':
+          description: SUCCESS
+          content:
+            application/json:
               schema:
                 $ref: '../model/produits/ProduitDTO.yml'
         '404':
